I add three for signup.html , failure.html and success.html files with three titles

--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SignUp Page</title>
+    <link rel="icon" href="images/icons/faviconSignUpPage.ico?=v">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
 </head>
