--- a/success.html
+++ b/success.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Success Page</title>
+    <link rel="icon" href="images/icons/faviconSuccessPage.ico?=v">
 </head>
 <body>
 
