--- a/failure.html
+++ b/failure.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Failure Page</title>
+    <link rel="icon" href="images/icons/faviconFailurePage.ico?=v">
 </head>
 <body>
 
