--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="images/icons/faviconSignUpPage.ico?=v">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="text-center">
