--- a/signup.html
+++ b/signup.html
@@ -10,25 +10,28 @@
 </head>
 
 <body class="text-center">
+
 <main class="form-signin w-100 m-auto">
-    <form>
+    <form action="/" method="post">
         <img class="mb-4" src="images/SignUp.png" alt="SignUp picture" width="100" height="100">
         <h1 class="h3 mb-3 fw-normal">Sign Up to My Newsletter!</h1>
 
         <div class="form-floating">
             <label for="firstNameInput">First Name</label>
-            <input type="text" class="form-control top" id="firstNameInput" placeholder="email" required autofocus>
-        </div>
-        <div class="form-floating">
-            <label for="lastNameInput">Last Name</label>
-            <input type="text" class="form-control middle" id="lastNameInput" placeholder="Password" required>
-        </div>
-        <div class="form-floating">
-            <label for="emailInput">Email</label>
-            <input type="email" class="form-control bottom" id="emailInput" placeholder="Password" required>
+            <input type="text" name="firstName" class="form-control top" id="firstNameInput" placeholder="email" required autofocus>
         </div>
 
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Me Up</button>
+        <div class="form-floating">
+            <label for="lastNameInput">Last Name</label>
+            <input type="text" name="lastName" class="form-control middle" id="lastNameInput" placeholder="Password" required>
+        </div>
+
+        <div class="form-floating">
+            <label for="emailInput">Email</label>
+            <input type="email" name="email" class="form-control bottom" id="emailInput" placeholder="Password" required>
+        </div>
+
+        <button class="w-100 btn btn-lg btn-primary" type="submit" name="submit">Sign Me Up</button>
         <p class="mt-5 mb-3 text-muted">&copy; Khoshfekr CV</p>
     </form>
 </main>
