--- a/signup.html
+++ b/signup.html
@@ -17,18 +17,18 @@
         <h1 class="h3 mb-3 fw-normal">Sign Up to My Newsletter!</h1>
 
         <div class="form-floating">
+            <input type="text" name="firstName" class="form-control top" id="firstNameInput" placeholder="First Name" required autofocus>
             <label for="firstNameInput">First Name</label>
-            <input type="text" name="firstName" class="form-control top" id="firstNameInput" placeholder="email" required autofocus>
         </div>
 
         <div class="form-floating">
+            <input type="text" name="lastName" class="form-control middle" id="lastNameInput" placeholder="Last Name" required>
             <label for="lastNameInput">Last Name</label>
-            <input type="text" name="lastName" class="form-control middle" id="lastNameInput" placeholder="Password" required>
         </div>
 
         <div class="form-floating">
+            <input type="email" name="email" class="form-control bottom" id="emailInput" placeholder="email" required>
             <label for="emailInput">Email</label>
-            <input type="email" name="email" class="form-control bottom" id="emailInput" placeholder="Password" required>
         </div>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit" name="submit">Sign Me Up</button>
