--- a/failure.html
+++ b/failure.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Failure Page</title>
-    <link rel="icon" href="public/images/icons/faviconFailurePage.ico?=v">
+    <link rel="icon" href="images/icons/faviconFailurePage.ico?=v">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.js"></script>
 </head>
 <body>
+
+<div class="p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Oh No Some things Wrong! 😥 </h1>
+        <p class="col-md-8 fs-4">Please back to SignUp Page and try again!</p>
+        <button onclick="window.location.href='http://localhost:3000/';" class="btn btn-primary btn-lg" type="button">Back to SignUp Page</button>
+    </div>
+</div>
 
 </body>
 </html>
