--- a/failure.html
+++ b/failure.html
@@ -13,7 +13,11 @@
     <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Oh No Some things Wrong! 😥 </h1>
         <p class="col-md-8 fs-4">Please back to SignUp Page and try again!</p>
-        <button onclick="window.location.href='http://localhost:3000/';" class="btn btn-primary btn-lg" type="button">Back to SignUp Page</button>
+
+        <form action="/failure" method="post">
+            <button  class="btn btn-primary btn-lg" type="submit">Back to SignUp Page</button>
+        </form>
+
     </div>
 </div>
 
