--- a/success.html
+++ b/success.html
@@ -13,7 +13,11 @@
     <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">Registration was successful! 😎 </h1>
         <p class="col-md-8 fs-4">You've been Successfully signed up to the newsletter, look forwards to lots of awesome content!</p>
-        <button onclick="window.location.href='http://localhost:3000/';" class="btn btn-primary btn-lg" type="button">Back to SignUp Page</button>
+
+        <form action="/success" method="post">
+            <button class="btn btn-primary btn-lg" type="submit">Back to SignUp Page</button>
+        </form>
+
     </div>
 </div>
 
